# CheckDuplicates

./: CMakeLists.txt  revision_data.h.in.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  Main.cpp  WarheadCheckDuplicates.conf.dist
src/checker/: CMakeLists.txt
src/checker/Check/: CheckMgr.cpp  CheckMgr.h
src/checker/WorldObject/: ObjectDefines.cpp  ObjectDefines.h  WorldObject.cpp  WorldObject.h
src/cmake/: genrev.cmake  showoptions.cmake
src/cmake/compiler/clang/: settings.cmake
src/cmake/macros/: CheckPlatform.cmake  ConfigInstall.cmake
src/cmake/platform/unix/: settings.cmake
src/common/: Banner.cpp  Banner.h  CMakeLists.txt  Define.h  GitRevision.cpp  GitRevision.h
src/common/Configuration/: Config.cpp  Config.h
src/common/Debugging/: Errors.cpp  Errors.h
src/common/Logging/: Channel.cpp  ConsoleChannel.cpp  Exception.h  FileChannel.cpp  FileChannel.h  Log.cpp  Log.h  LogCommon.h  Logger.h
src/common/Threading/: ProducerConsumerQueue.h
src/common/Utilities/: Containers.h  Duration.h  FileUtil.cpp  FileUtil.h  StopWatch.h  StringConvert.h  StringFormat.cpp  StringFormat.h  TimeUtils.cpp  TimeUtils.h  Timer.cpp  Timer.h  Tokenize.h  Types.h  Util.cpp  Util.h
src/database/: CMakeLists.txt
src/database/Database/: DatabaseAsyncOperation.cpp  DatabaseAsyncOperation.h  DatabaseAsyncQueueWorker.cpp  DatabaseAsyncQueueWorker.h  DatabaseEnv.h  DatabaseEnvFwd.h  DatabaseMgr.cpp  DatabaseMgr.h  DatabaseWorkerPool.cpp  DatabaseWorkerPool.h  Field.cpp  MySQLConnection.cpp  MySQLConnection.h  MySQLPreparedStatement.cpp  QueryHolder.cpp  QueryHolder.h  QueryResult.cpp  Transaction.cpp  Transaction.h
src/database/Database/Implementation/: WorldDatabase.cpp  WorldDatabase.h
src/genrev/: CMakeLists.txt
